# libtensor

./: .gitignore  CMakeLists.txt  Makefile  README.md  download_mnist.sh  tch.py
examples/: convolution.c  example.c  example_tinygrad.py  example_torch.py  mnist.c  mnist.py  tensor_example.c
include/: tensor.h
src/: functions.c  graph.c  helpers.c  intarray.c  op.c  optimizers.c  storage.c  tensor.c  tuple.c  view.c
tests/: tensor_add.cpp  test_backward.cpp  test_tensor.cpp
